<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/timetableFragment"
        android:icon="@drawable/ic_insert_invitation_black_24dp"
        android:title="@string/nav_timetable" />
    <item
        android:id="@+id/favouritesFragment"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/nav_favourites" />
    <item
        android:id="@+id/speakersFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_speakers" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_search" />
</menu>