<resources>
    <string name="app_name">Conference App</string>
    <string name="timetable_tab">Timetable</string>
    <string name="favourites_tab">Favourites</string>
    <string name="speakers_tab">Speakers</string>


    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="nav_speakers">Speakers</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_timetable">Timetable</string>
    <string name="session_view_image_description">The session type</string>
    <string name="speaker_image_content_description">Picture of the speaker</string>
    <string name="speaker_name_first_part">Speaker:</string>
    <string name="session_view_favourite_button_text">Set session as favourite.</string>
    <string name="speaker_list_speaker_image_content_description">Image of the speaker</string>
    <string name="no_sessions">There are no sessions to display.</string>
    <string name="nav_search">Search</string>
</resources>
