...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/primaryTextColor" />

    <TextView
        style="@style/SessionTextView"
        android:id="@+id/session_title_text_view"
        android:layout_marginTop="5dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
