...
            android:id="@+id/session_view_title"
            style="@style/SessionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"

            app:layout_constraintEnd_toStartOf="@id/session_view_set_favourite_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/session_view_set_favourite_button"
            android:layout_width="wrap_content"
...
            android:background="#363c41"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/session_view_session_description" />

        <TextView
            android:id="@+id/session_view_speaker_name"
            style="@style/SessionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"

...
